Cherry Dse-v2 PR to main (Stargate 2.0)